@@ -1,6 +1,11 @@
 
   ChangeLog for the spinning_mcmc repository.  
   Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
+  
+    53: sluys, 06/08/2008
+     - Replaced LALinterface.c with mcmc_lal.c: this contains all of LALinterface
+       plus template15().  LAL-dependent stuff was moved from mcmc.h to the new
+       file mcmc_lal.h.  A file mcmc_nolal.c was added to allow LALless compilation.
         
     48: sluys, 07/07/2008
      - Made some small changes (cleaning?) to the 15-waveform routines to see if 
